[gd_scene load_steps=4 format=3 uid="uid://hr5ks54660xu"]

[ext_resource type="Script" path="res://addons/gd-plug-ui/scene/plugin_settings/PluginSettings.gd" id="1"]
[ext_resource type="Texture2D" path="res://addons/gd-plug-ui/assets/icons/progress/progress_animated_texture.tres" id="2_30o7o"]

[sub_resource type="StyleBoxEmpty" id="1"]

[node name="gd-plug" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Tree" type="Tree" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 0.9
columns = 3
column_titles_visible = true
hide_root = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="InitBtn" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = "Init"

[node name="CheckForUpdateBtn" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
text = "Check for Update"

[node name="UpdateSection" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 6

[node name="ForceCheck" type="CheckButton" parent="MarginContainer/HBoxContainer/UpdateSection"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
tooltip_text = "Force installation of plugin, may overwrite project files in case of conflicts."
theme_override_styles/focus = SubResource("1")
text = "Force"

[node name="ProductionCheck" type="CheckButton" parent="MarginContainer/HBoxContainer/UpdateSection"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
tooltip_text = "Install plugins not marked as \"dev\", and uninstall plugins marked as \"dev\""
theme_override_styles/focus = SubResource("1")
text = "Production"

[node name="UpdateBtn" type="Button" parent="MarginContainer/HBoxContainer/UpdateSection"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
text = "Update"

[node name="LoadingOverlay" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CenterContainer" type="CenterContainer" parent="LoadingOverlay"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="LoadingOverlay/CenterContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="LoadingOverlay/CenterContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_30o7o")
stretch_mode = 3

[node name="LoadingLabel" type="Label" parent="LoadingOverlay/CenterContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="MarginContainer/HBoxContainer/InitBtn" to="." method="_on_Init_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/CheckForUpdateBtn" to="." method="_on_CheckForUpdateBtn_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/UpdateSection/UpdateBtn" to="." method="_on_UpdateBtn_pressed"]
